# ChangeLog for games-arcade/triplexinvaders
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-arcade/triplexinvaders/ChangeLog,v 1.5 2009/05/31 02:09:08 nyhm Exp $

  31 May 2009; Tristan Heaven <nyhm@gentoo.org> triplexinvaders-1.08.ebuild:
  Fix LICENSE: as-is -> MIT

  14 Apr 2007; <tupone@gentoo.org>
  +files/triplexinvaders-1.08-gentoo.patch, +metadata.xml,
  +triplexinvaders-1.08.ebuild:
  Moved data-files to GAMES_DATADIR

*triplexinvaders-1.08 (14 Apr 2007)

  14 Apr 2007; <tupone@gentoo.org> +metadata.xml,
  +triplexinvaders-1.08.ebuild:
  New package. Requested with bug #124764 by Matija Suklje (hook)
