@@ -1,6 +1,10 @@
 # ChangeLog for games-arcade/triplexinvaders
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-arcade/triplexinvaders/ChangeLog,v 1.5 2009/05/31 02:09:08 nyhm Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-arcade/triplexinvaders/ChangeLog,v 1.6 2010/02/08 14:04:09 fauli Exp $
+
+  08 Feb 2010; Christian Faulhammer <fauli@gentoo.org>
+  triplexinvaders-1.08.ebuild:
+  stable x86, bug 299698
 
   31 May 2009; Tristan Heaven <nyhm@gentoo.org> triplexinvaders-1.08.ebuild:
   Fix LICENSE: as-is -> MIT
